# portal

./: .gitignore  README.md  pyproject.toml
backend/: .env.example  IMPLEMENTATION_SUMMARY.md  claude.md  pyproject.toml  pyrightconfig.json
backend/app/: main.py
backend/app/agents/: __init__.py  explore.py  graph.py  nodes.py  prompts.py
backend/app/api/: deps.py
backend/app/api/endpoints/: agent.py  base.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: chat.py  documents.py
backend/app/core/: config.py
backend/app/db/: supabase.py
backend/app/explore/: IMPLEMENTATION_SUMMARY.md  claude.md  main.py
backend/app/explore/agents/: __init__.py  explore.py  graph.py  nodes.py  prompts.py
backend/app/explore/api/: deps.py
backend/app/explore/api/v1/: router.py
backend/app/explore/api/v1/endpoints/: chat.py  documents.py
backend/app/explore/db/: supabase.py
backend/app/explore/schemas/: document.py
backend/app/explore/services/: pdf_parser.py  rag_service.py
backend/app/models/: rate_limit.py
backend/app/schemas/: chat.py
backend/app/services/: rag_service.py
frontend/: AGENTS.md  README.md  biome.json  middleware.ts  next.config.ts  package-lock.json  package.json  postcss.config.mjs  proxy.ts
frontend/.github/: copilot-instructions.md
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
frontend/components/: AccordionProjects.module.css  AccordionProjects.tsx  Authentication.tsx  CustomPasswordInput.tsx  FloatingLabelInput.module.css  FloatingLabelInput.tsx  Footer.tsx  Navbar.tsx  (+20 more)
(+158 files in other folders)
